Apr 29, 2003: Jordi Mallach <jordi@sindominio.net>
- update Catalan and Spanish translations

Apr 27, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- fix keyboard focus in server list
- don't allow double click on map column if game supports map preview,
  otherwise mouse would be grabbed and not available in other windows

Apr 26, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- Display team of player for wolf and et

Apr 25, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- Icon for Enemy Territory
- Config option for Master server

Apr 24, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- cleanups, fixed some warnings, changed debug macros
- initial Enemy Territory Support (Testversion)
- increased version number

Apr 22, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- don't display warnings about NULL if scanning for maps is disabled. Thanks
  Jochen Baier for reporting.

Mar 24, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- popup window with levelshot when clicking on map column, currently supports
  jpg shots inside pk3 files for q3 and wolf.

Mar 15, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- added Serious Sam: The Second Encounter

Mar 10, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- store all map names lowercase, otherwise many maps are reported as
  not installed
- #define ZEXPORT if not already defined to fix compilation problems. Thanks
  Pierre Pronchery
- set private clients from reserve_slots variable for hl

Mar 07, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- game types for westernq3

Feb 19, 2003: Jordi Mallach <jordi@sindominio.net>
- update Catalan translation

Feb 09, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- adapt configure.in to install French translation

Feb 08, 2003: Alex Burger <alex_b@users.sourceforge.net>
- Added French translation

Feb 04, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
- move server filter submenu to top level
- remove rarely used buttons from toolbar
